# radius2

./: Cargo.toml  Makefile  README.md  autogen.sh
.github/workflows/: release.yml  rust.yml
doc/images/: radius2.xcf
radius/: Cargo.toml  README.md
radius/src/: memory.rs  operations.rs  processor.rs  r2_api.rs  radius.rs  registers.rs  state.rs
radius/src/sims/: libc.rs
