[workspace]
resolver = "2"

members = [
    "radius",
    "examples/ais3",
    "examples/r100",
    "examples/r200",
    "examples/unbreakable",
    "examples/dex",
    "examples/babyre",
    "examples/frida",
    "examples/tracer",
    "examples/ollvm",
    "examples/statically-linked"
]
exclude = ["vendor/boolector"]

[profile.release]
lto = true
opt-level=3

[patch.crates-io]
# boolector 0.4.3 compares ftell() output against an i64 constant, which fails on Windows.
boolector = { path = "vendor/boolector" }
