[package]
name = "radius2"
description = "a fast symbolic execution framework using r2"
version = "1.2.0"
authors = ["aemmitt-ns <aemmitt@nowsecure.com>"]
license = "MIT"
edition = "2018"
keywords = ["symbolic", "execution"]
repository = "https://github.com/aemmitt-ns/radius"
readme = "README.md"

[dependencies]
r2pipe = "0.8.0"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
clap = "2.33.3"
rand = "0.8.4"
colored = "2.0.0"

[features]
default = []

[target.'cfg(not(windows))'.dependencies]
boolector = { path = "../vendor/boolector", features = ["vendor-lgl"] }

[target.'cfg(windows)'.dependencies]
boolector = { path = "../vendor/boolector", features = ["vendor-lgl"] }

[package.metadata.docs.rs]
no-default-features = true
